[skip ci] Update license year
Signed-off-by: syzygial <67280346+syzygial@users.noreply.github.com>

--- a/docs/man/hminfo.1
+++ b/docs/man/hminfo.1
@@ -1,9 +1,9 @@
-.TH HMINFO "1" "December 2023" "Hiemal 0.1.0" "User Commands"
+.TH HMINFO "1" "2024" "Hiemal 0.1.0" "User Commands"
 .SH NAME
 hminfo \- show information about the Hiemal library
 .SH AUTHOR
 syzygial
 .SH COPYRIGHT
-Copyright (c) 2022-2023 Hiemal Labs
+Copyright (c) 2022-2024 Hiemal Labs
 .br
 MIT License
